# serializer version: 1
# name: test_clean_old_archives[logs]
  list([
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Connected to "0.0.0.0" as "django_tests"',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Current remote dir is "/"',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] sftp session closed.',
      'module': 'sftp',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 1] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Connected to "0.0.0.0" as "django_tests"',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Current remote dir is "/"',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': "Going to delete the old archive 'FLUX_EA2_ITOU_20240802.zip'",
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': "Old archive 'FLUX_EA2_ITOU_20240802.zip' was deleted",
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': "Going to delete the old archive 'FLUX_EA2_ITOU_20240801.zip'",
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': "Old archive 'FLUX_EA2_ITOU_20240801.zip' was deleted",
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 1] sftp session closed.',
      'module': 'sftp',
    }),
  ])
# ---
# name: test_clean_old_archives_dry_run[logs]
  list([
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Connected to "0.0.0.0" as "django_tests"',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': 'Current remote dir is "/"',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'clean_old_archives',
      'levelno': 20,
      'message': "Going to delete the old archive 'FLUX_EA2_ITOU_20250512.zip'",
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] sftp session closed.',
      'module': 'sftp',
    }),
  ])
# ---
# name: test_process_file_from_archive[data]
  list([
    tuple(
      'EA',
      '00000000000001',
      'EA_EATT',
      'Dumas Sa',
      '',
      'legerdenise@example.org',
      '1 Rue DE LA MOTTE',
      '',
      '77550',
      None,
      '',
      '77',
      None,
    ),
    tuple(
      'EATT',
      '00000000000001',
      'EA_EATT',
      'Collet Sarl',
      '',
      'legerdenise@example.org',
      '1 Rue DE LA MOTTE',
      '',
      '77550',
      None,
      '',
      '77',
      None,
    ),
  ])
# ---
# name: test_process_file_from_archive[logs]
  list([
    dict({
      'funcName': 'process_file',
      'info_stats': dict({
        'creatable_sirets': 2,
        'deletable_sirets': 0,
        'not_created_because_of_missing_email': 1,
        'rows_after_deduplication': 3,
        'rows_after_kind_filter': 4,
        'rows_in_file': 5,
        'rows_used': 3,
        'rows_with_a_siret': 3,
        'rows_with_empty_email': 0,
        'structures_created': 2,
        'structures_deletable_skipped': 0,
        'structures_deleted': 0,
        'structures_undeletable': 0,
        'structures_updated': 0,
        'updatable_sirets': 0,
      }),
      'levelno': 20,
      'message': '2 structures created, 0 structures updated, 0 structures deleted',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'process_file',
      'levelno': 30,
      'message': '1 structures not created because of missing email',
      'module': 'import_ea_eatt',
    }),
  ])
# ---
# name: test_retrieve_archive_of_the_week[logs]
  list([
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] Opened sftp connection (server version 3)',
      'module': 'sftp',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Connected to "0.0.0.0" as "django_tests"',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': 'Current remote dir is "/"',
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': "Files matching for this monday '20250512': FLUX_EA2_ITOU_20250512.zip",
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': 'retrieve_archive_of_the_week',
      'levelno': 20,
      'message': "Found the archive_of_the_week: 'FLUX_EA2_ITOU_20250512.zip'",
      'module': 'import_ea_eatt',
    }),
    dict({
      'funcName': '_log',
      'levelno': 20,
      'message': '[chan 0] sftp session closed.',
      'module': 'sftp',
    }),
  ])
# ---
